Refactor pom.xml: Update groupId and artifactId, enhance project description, and reorganize plugin management